crates/tsuno-driver/tests/fixtures/snapshots/pass/abstracts_mutable_reference_calls.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS bad_after_call
  all assertions discharged

stderr:
