crates/tsuno-driver/tests/fixtures/snapshots/pass/allows_ens_only_function_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS ens_only_contract
  all assertions discharged
PASS main
  all assertions discharged

stderr:
