crates/tsuno-driver/tests/fixtures/snapshots/pass/allows_mutable_reference_field_splitting.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS allows_mutable_reference_field_splitting
  all assertions discharged
PASS allows_mutable_reference_field_splitting_three
  all assertions discharged
PASS main
  all assertions discharged

stderr:
