crates/tsuno-driver/tests/fixtures/snapshots/pass/allows_partial_move_then_remaining_field_write.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 131
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS partial_move_then_remaining_field_write
  all assertions discharged
PASS partial_move_then_remaining_field_write_three
  all assertions discharged

stderr:
