crates/tsuno-driver/tests/fixtures/snapshots/pass/allows_vec_initial_state.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS allows_vec_initial_state
  all assertions discharged
PASS main
  all assertions discharged

stderr:
