crates/tsuno-driver/tests/fixtures/snapshots/pass/assert_allows_existential_witness.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS foo
  all assertions discharged
PASS main
  all assertions discharged

stderr:
