crates/tsuno-driver/tests/fixtures/snapshots/pass/assert_negated_existential_call.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS main
  all assertions discharged

stderr:
