crates/tsuno-driver/tests/fixtures/snapshots/pass/assume_prunes_unsatisfiable_branch.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS assume_prunes_unsatisfiable_branch
  all assertions discharged
PASS impossible
  all assertions discharged
PASS main
  all assertions discharged

stderr:
